@@ -105,6 +105,8 @@ public:
 
     QString currSelNetName = ""; //当前ScrollArea中选中的网络名称
 
+    void on_btnNetList_clicked(int flag=0);
+
 public slots:
     void onPhysicalCarrierChanged(bool flag);
     void onCarrierUpHandle();
@@ -196,7 +198,6 @@ private slots:
 
     void on_btnNet_clicked();
     void on_btnWifi_clicked();
-    void on_btnNetList_clicked(int flag=0);
     void on_btnWifiList_clicked();
 
     void getLanListDone(QStringList slist);
@@ -234,7 +235,7 @@ private slots:
     void iconStep();
     void on_btnFlyMode_clicked();
 
-    void on_btnAddNet_clicked();
+    void onBtnAddNetClicked();
 signals:
     void deleteRedundantNet();
 
